testData/highlighting/declaredButNotUsed.go
package main

func main() {
	<error descr="String literal evaluated but not used">"hello"</error>
	<error descr="Function literal evaluated but not used">func</error>(){}
}
